--- a/XboxGame/GameDetailView.xaml
+++ b/XboxGame/GameDetailView.xaml
@@ -8,11 +8,26 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Button Content="View Details"  Margin="403,383,247,47" VerticalAlignment="Center" Width="150"
+        <Button Content="View Details"  Margin="449,401,201,29" VerticalAlignment="Center" Width="150"
                                         cal:Message.Attach="[Event Click]=[Action LoadGameList()]" RenderTransformOrigin="0.5,0.5">
         </Button>
         <Label Content="Label" HorizontalAlignment="Left" Margin="42,16,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Height="79" Margin="44,57,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="416"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="383,169,0,0" VerticalAlignment="Top" Width="75"/>
+        <Grid Margin="0,0,0,20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <ListView Name="UserGrid" Grid.Row="1" Margin="4,182,12,60"  ItemsSource="{Binding GameReviews}"  >
+                <ListView.View>
+                    <GridView x:Name="grdTest">
+                        <GridViewColumn Header="Review Comments" DisplayMemberBinding="{Binding ReviewComments}"  Width="80" />
+                        <GridViewColumn Header="Rating" DisplayMemberBinding="{Binding GameRatingId}" Width="100" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="383,147,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </UserControl>
