--- a/XboxGame/GameDetailView.xaml
+++ b/XboxGame/GameDetailView.xaml
@@ -11,8 +11,8 @@
         <Button Content="View Details"  Margin="449,401,201,29" VerticalAlignment="Center" Width="150"
                                         cal:Message.Attach="[Event Click]=[Action LoadGameList()]" RenderTransformOrigin="0.5,0.5">
         </Button>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="42,16,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="79" Margin="44,57,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="416"/>
+        <Label Content="{Binding Game.Title}" HorizontalAlignment="Left" Margin="42,16,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="79" Margin="44,57,0,0" TextWrapping="Wrap" Text="{Binding Game.Description}" VerticalAlignment="Top" Width="416"/>
         <Grid Margin="0,0,0,20">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -26,6 +26,7 @@
                 </ListView.View>
             </ListView>
         </Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="383,147,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="383,147,0,0" VerticalAlignment="Top" Width="75"
+                cal:Message.Attach="[Event Click]=[Action UpdateDescription()]"/>
     </Grid>
 </UserControl>
