--- a/XboxGame/GameDetailView.xaml
+++ b/XboxGame/GameDetailView.xaml
@@ -26,7 +26,7 @@
                 </ListView.View>
             </ListView>
         </Grid>
-        <Button Content="Back to List"  Margin="622,-220,28,417" VerticalAlignment="Center" Width="150"
+        <Button Content="Back to List"  Margin="458,11,192,419" VerticalAlignment="Center" Width="150"
                                         cal:Message.Attach="[Event Click]=[Action LoadGameList()]" RenderTransformOrigin="0.5,0.5">
         </Button>
     </Grid>
