--- a/XboxGame/ShellView.xaml
+++ b/XboxGame/ShellView.xaml
@@ -1,6 +1,7 @@
 <Window x:Class="XboxGame.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="Xbox Game Console">
 
     <Grid Background="White">
         <ContentControl x:Name="ConentView"></ContentControl>
