--- a/XboxGame/RateGameView.xaml
+++ b/XboxGame/RateGameView.xaml
@@ -8,13 +8,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Height="300" Width="800">
-        <Label Content="{Binding Game.Title}" HorizontalAlignment="Left" Margin="334,32,0,0" FontWeight="Bold" VerticalAlignment="Top"/>
-        <Button Content="Add Review" HorizontalAlignment="Left" Margin="582,216,0,0" VerticalAlignment="Top" Width="75"
+        <Label Content="{Binding Game.Title}" HorizontalAlignment="Left" Margin="378,10,0,0" FontWeight="Bold" VerticalAlignment="Top"/>
+        <Button Content="Add Review" HorizontalAlignment="Left" Margin="582,226,0,0" VerticalAlignment="Top" Width="75"
                 cal:Message.Attach="[Event Click]=[Action RateGame()]"/>
-        <TextBox HorizontalAlignment="Left" Height="64" Margin="80,115,0,0" TextWrapping="Wrap" Text="{Binding ReviewComments}" VerticalAlignment="Top" Width="577"/>
-        <ComboBox HorizontalAlignment="Left" Margin="80,64,0,0" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="64" Margin="81,136,0,0" TextWrapping="Wrap" Text="{Binding ReviewComments}" VerticalAlignment="Top" Width="577"/>
+        <ComboBox HorizontalAlignment="Left" Margin="208,65,0,0" VerticalAlignment="Top" Width="120"
                   ItemsSource="{Binding GameRatings}"  DisplayMemberPath="Id"
                   SelectedItem="{Binding SelectedGameRating}" />
+        <Label Content="Rating between 1-5:" HorizontalAlignment="Left" Margin="81,61,0,0" VerticalAlignment="Top"/>
+        <Label Content="Review Comment" HorizontalAlignment="Left" Margin="81,108,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </UserControl>
